Завершение
- Запрет добавления комментария для задач со статусом cancelled
- response для openapi
- обновил README.md
